# URF-Profanity

./: README.md  main.py  pyproject.toml
src/: downloader.py  main.py  profanity.py  shows.py  snippet.py  transcribe.py
