[project]
name = "whisper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "better-profanity>=0.7.0",
    "gql[all]>=4.0.0",
    "openai-whisper>=20240930",
    "pandas>=2.2.3",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.1",
    "rich>=14.0.0",
]
